--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/public.loader.js";
+      var loaderUrl = buildUrl + "/vv4.loader.js";
       var config = {
-        dataUrl: buildUrl + "/public.data.unityweb",
-        frameworkUrl: buildUrl + "/public.framework.js.unityweb",
-        codeUrl: buildUrl + "/public.wasm.unityweb",
+        dataUrl: buildUrl + "/vv4.data.unityweb",
+        frameworkUrl: buildUrl + "/vv4.framework.js.unityweb",
+        codeUrl: buildUrl + "/vv4.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Maxstepp",
         productName: "WebglResponsiveTemplate",
